--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -12,5 +12,25 @@
     "minutes": "Minutes",
     "second": "Seconds",
     "our_venue": "Our Venue",
-    "join_us": "Join us at the beautiful Château de Vallery in France, where we'll celebrate our special day surrounded by historic architecture and breathtaking gardens."
+    "join_us": "Join us at the beautiful Château de Vallery in France, where we'll celebrate our special day surrounded by historic architecture and breathtaking gardens.",
+    "castle_pool": "The Chateau Pool",
+    "aerial_view": "Aerial View of Château de Villette",
+    "main_castle": "The Main Château",
+    "our_events": "Our Events",
+    "events_subtitle": "All our wedding festivities will be held at the beautiful Chateau de Vallery, a historic French castle that will provide a romantic backdrop for our celebration.",
+    "explain_rooms": "Since all of the wedding events will be held at the chateau, we'll be reserving rooms for you.",
+    "explain_hotels": "For those who like to stay more time, we will organize local Bed & Breakfasts and hotel options for you. Most are walking distance or a very short drive! If you are eager to book now, please refer to the recommendations below and let us know what your plan is.",
+    "your_name": "Your Name",
+    "enter_full_name": "Enter your full name",
+    "email_address": "Email Address",
+    "fill_email": "Enter your email",
+    "confirmation": "Will you be attending?",
+    "yes_confirmation": "Yes, I'll be there",
+    "no_confirmation": "Unfortunately, I can't make it",
+    "number_guests": "Number of Guests (including yourself)",
+    "food_restriction": "Dietary Restrictions",
+    "food_restriction_explanation": "Please let us know of any dietary restrictions or allergies",
+    "message_to_couple": "Message to the Couple (Optional)",
+    "message_to_couple_explanation": "Share your well wishes or any message for us",
+    "send_form": "Submit RSVP"
 }
