--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -4,7 +4,7 @@
     "accomodation": "Acomodações",
     "getting_married": "VAMOS NOS CASAR!",
     "date_celebration": "October 5-7, 2025 • Celebração de Amor",
-    "view_events": "View Events",
+    "view_events": "Ver eventos",
     "reserve": "Nós reservamos o Chateau de Vallery por 3 dias e 2 noites: 5 de Outubro (domingo) até terça, 7 de outubro",
     "count_down": "Contagem para o grande dia",
     "days": "Dias",
@@ -12,5 +12,25 @@
     "minutes": "Minutos",
     "second": "Segundos",
     "our_venue": "O local",
-    "join_us": "Junte a nós no lindo Château de Vallery na França, onde nós vamos celebar o nosso dia com arquitetura histórica e uma paisagem belíssima."
+    "join_us": "Junte a nós no lindo Château de Vallery na França, onde nós vamos celebar o nosso dia com arquitetura histórica e uma paisagem belíssima.",
+    "castle_pool": "Piscina do castelo",
+    "aerial_view": "Vista de cima do castelo",
+    "main_castle": "Entrada do castelo",
+    "our_events": "Os eventos",
+    "events_subtitle": "Os eventos irão acontecer no castelo de Vallery, um histórico castelo frances que vai oferecer um cenário romântico para nossa celebração.",
+    "explain_rooms": "Há quartos para os convidados!",
+    "explain_hotels": "Para quem quiser ficar mais tempo, vamos organizar opções de Bed & Breakfast e hotéis locais para você. A maioria fica a uma curta caminhada ou a poucos minutos de carro! Se você já quiser fazer sua reserva agora, confira as recomendações abaixo e nos avise qual é o seu plano.",
+    "your_name": "Seu nome",
+    "enter_full_name": "Seu nome completo",
+    "email_address": "Endereço de email",
+    "fill_email": "Insira seu email",
+    "confirmation": "Você vai?",
+    "yes_confirmation": "Sim, estarei presente",
+    "no_confirmation": "Infelimente, não poderei ir",
+    "number_guests": "Número de convidados (incluindo você)",
+    "food_restriction": "Restrição alimentar",
+    "food_restriction_explanation": "Por favor nos falo de alergias e intolerâncias alimentares.",
+    "message_to_couple": "Menssagem ao casal (Opcional)",
+    "message_to_couple_explanation": "Coloque uma mensagem para nós",
+    "send_form": "Enviar"
 }
