--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -3,7 +3,7 @@
     "schedule": "Agenda",
     "accomodation": "Acomodações",
     "getting_married": "VAMOS NOS CASAR!",
-    "date_celebration": "October 5-7, 2025 • Celebração de Amor",
+    "date_celebration": "Outubro 5-7, 2025 • Celebração de Amor",
     "view_events": "Ver eventos",
     "reserve": "Nós reservamos o Chateau de Vallery por 3 dias e 2 noites: 5 de Outubro (domingo) até terça, 7 de outubro",
     "count_down": "Contagem para o grande dia",
