--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -12,7 +12,7 @@
     "minutes": "Minutos",
     "second": "Segundos",
     "our_venue": "O local",
-    "join_us": "Junte a nós no lindo Château de Vallery na França, onde nós vamos celebar o nosso dia com arquitetura histórica e uma paisagem belíssima.",
+    "join_us": "Junte a nós no lindo Château de Vallery na França, onde nós vamos celebrar o nosso dia com arquitetura histórica e uma paisagem belíssima.",
     "castle_pool": "Piscina do castelo",
     "aerial_view": "Vista de cima do castelo",
     "main_castle": "Entrada do castelo",
