--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -32,5 +32,20 @@
     "food_restriction_explanation": "Por favor nos falo de alergias e intolerâncias alimentares.",
     "message_to_couple": "Menssagem ao casal (Opcional)",
     "message_to_couple_explanation": "Coloque uma mensagem para nós",
-    "send_form": "Enviar"
+    "send_form": "Enviar",
+    "date": "Outubro 5-7, 2025",
+    "local_accommodations": "Acomodações Próximas",
+    "bandb_walk_section": "Hoteis nas proximidades",
+    "margottiere_section1": "10 minutos de caminhada do Chateau de Vallery; 300 metros",
+    "margottiere_rooms1": "4 quartos, incluindo café da manhã",
+    "margottiere_rooms2": "2 quartos triplos, incluindo café da manhã",
+    "collete_subtitle": "5 minutos andando do Chateau de Vallery – O mesmo dono do Margottiere; 150 metros)",
+    "collete_rooms1": "5 quartos duplos, incluindo café da manhã",
+    "collete_info": "Vá ao Margottiere ara coletar as chaves",
+    "chez_rooms1": "5 quartos duplos",
+    "chez_rooms2": "1 quarto com 2 camas",
+    "pequelette_rooms1": "1 quarto duplo, incluindo café da manhã",
+    "pequelette_rooms2": "1 quarto duplo com duas camas, incluindo café da manhã",
+    "chez_marie_rooms1": "4 quartos duplos",
+    "extra_breakfast": "Café da manhã extra"
 }
