--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -47,5 +47,26 @@
     "pequelette_rooms1": "1 double room, including breakfast",
     "pequelette_rooms2": "1 double twin bed room, including breakfast",
     "chez_marie_rooms1": "4 double rooms",
-    "extra_breakfast": "Breakfast extra"
+    "extra_breakfast": "Breakfast extra",
+    "bandb_5_min_drive": "Bed & Breakfasts within a 5 minute drive",
+    "renauderie_explain": "(5 minute drive from Chateau; 3km)",
+    "renauderie_rooms": "3 double rooms, including breakfast",
+    "melusine_explain": "(5 minute drive from chateau; 4k or 2.5 miles)",
+    "melusine_rooms": "4 double or single rooms, including breakfast",
+    "sunday": "Sunday",
+    "monday": "Monday",
+    "tuesday": "Tuesday",
+    "wedding_ceremony": "Wedding Ceremony & Reception",
+    "wedding_ceremony_description": "Our wedding ceremony will take place followed by cocktail hour, dinner, and dancing to celebrate our union.",
+    "monday_brunch_description": "Join us to enjoy a relax moment with pool, friends, music and food to recover after our big party.",
+    "monday_brunch_title": "Recovery Brunch",
+    "october_5": "October 5, 2025",
+    "october_6": "October 6, 2025",
+    "october_7": "October 7, 2025",
+    "monday_dinner_title": "Gala Dinner",
+    "monday_dinner_explain": "Enjoy an elegant evening of france dining and entertainment to celebrate our union.",
+    "monday_wine_cheese_title": "Wine and Cheese",
+    "monday_wine_cheese_explain": "A night of wines and food to celebrate our union.",
+    "tuesday_breakfast_title": "Goodbye Breakfast",
+    "tuesday_breakfast_description": "Join us for a farewell breakfast as we conclude our wedding celebration weekend. Share your favorite moments from the festivities before departing."
 }
