--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -47,5 +47,26 @@
     "pequelette_rooms1": "1 quarto duplo, incluindo café da manhã",
     "pequelette_rooms2": "1 quarto duplo com duas camas, incluindo café da manhã",
     "chez_marie_rooms1": "4 quartos duplos",
-    "extra_breakfast": "Café da manhã extra"
+    "extra_breakfast": "Café da manhã extra",
+    "bandb_5_min_drive": "Hoteis a distância de 5 minutos a carro",
+    "renauderie_explain": "(5 minutos de carro do Chateau; 3km)",
+    "renauderie_rooms": "3 quartos duplos, incluindo café da manhã",
+    "melusine_explain": "(5 minutos de carro do Chateau; 4km)",
+    "melusine_rooms": "4 quartos, incluindo café da manhã",
+    "sunday": "Domingo",
+    "monday": "Segunda Feira",
+    "tuesday": "Terça Feira",
+    "wedding_ceremony": "Recepção e cerimônia de casamento",
+    "wedding_ceremony_description": "Vamos fazer a cerimônia depois vai ter uma festa para comemorarmos nossa união.",
+    "monday_brunch_description": "Junte-se a nós para aproveitar um momento de relaxamento com piscina, amigos, música e comida para se recuperar depois da nossa grande festa.",
+    "monday_brunch_title": "Brunch pós festa",
+    "october_5": "Outubro 5, 2025",
+    "october_6": "Outubro 6, 2025",
+    "october_7": "Outubro 7, 2025",
+    "monday_dinner_title": "Jantar de Gala",
+    "monday_dinner_explain": "Desfrute de uma noite elegante com jantar francês e entretenimento para celebrar a nossa união.",
+    "monday_wine_cheese_title": "Queijo e vinhos",
+    "monday_wine_cheese_explain": "Uma noite de vinhos e comida para celebrar a nossa união.",
+    "tuesday_breakfast_title": "Café da manhã de despedida",
+    "tuesday_breakfast_description": "Junte-se a nós para um café da manhã de despedida enquanto encerramos o fim de semana de celebração do nosso casamento. Compartilhe seus momentos favoritos da festa antes de partir."
 }
